Add java 11 (#1048)